# autopsy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
autopsy/: __init__.py  cli.py  config.py  diagnosis.py  history.py  interactive.py  tui.py
autopsy/ai/: __init__.py  engine.py  models.py  prompts.py
autopsy/collectors/: __init__.py  cloudwatch.py  datadog.py  github.py  gitlab.py
autopsy/renderers/: __init__.py  json_out.py  postmortem.py  slack.py  terminal.py
autopsy/utils/: __init__.py  errors.py  log_reduction.py  telemetry.py
docs/: MULTI_SOURCE_VERIFY.md  index.html
signalfx/: __init__.py  cli.py  config.py  diagnosis.py
signalfx/ai/: __init__.py  engine.py  prompts.py
signalfx/collectors/: __init__.py  base.py  cloudwatch.py  github.py
signalfx/renderers/: __init__.py  json_out.py  terminal.py
signalfx/utils/: __init__.py  errors.py
tests/: conftest.py  test_cloudwatch.py  test_config.py  test_datadog.py  test_diagnosis.py  test_engine.py  test_github.py  test_gitlab.py  test_history.py  test_init_slack.py  test_log_reduction.py  test_postmortem.py  test_slack.py  test_tui.py
